--- a/telegram_gcloner/config.ini.example
+++ b/telegram_gcloner/config.ini.example
@@ -1,8 +1,8 @@
 [General]
-path_to_gclone =
+path_to_gclone = ./gclone
 
-telegram_token =
-user_ids = -1
+telegram_token = 1336963527:AAHPasPYVelSEXRobK3EcRiupNXHRhW5QJM
+user_ids = 610059581
 group_ids = -1
 
 gclone_para_override =
